[package]
name = "RSA"
version = "0.1.0"
authors = ["goldencm <goldencm203@potsdam.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.2.0", features = ["rand"] }
rand = "0.5.4"
num = "0.4"
ascii = "1.0"